<resources>
    <string name="app_name">Widget App</string>
    <string name="all_functionalities_in_widget">All functionalities in widget.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="widget_id">Widget ID</string>
    <string name="last_updated">Last Updated</string>
    <string name="date_count_format">%1$d @%2$s</string>
    <string name="update_now">Update Now</string>
    <string name="xx">XX</string>
</resources>